Pull request #321: TND-6196: removed disable input for editing related campaigns and bundles, fix rotation searchIcon in select
Merge in MOBILEDEVPROJECTS/distributor-admin from feature/TND-6196 to develop

Squashed commit of the following:

commit d03f761f8053805a0286a5b01a3c61cef772c059
Author: OUT-Baturin3-AS <ASBaturin@sberbank.ru>
Date:   Thu Nov 11 14:05:00 2021 +0300

    TND-6196: removed disable input for editing related campaigns and bundles, fix rotation searchIcon in select

--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,10 @@ input.ant-input:placeholder-shown ~ .ant-input-suffix .anticon-close-circle {
     transform: rotate(-180deg);
 }
 
+.ant-select-open .ant-select-arrow .anticon-search {
+    transform: rotate(-180deg);
+}
+
 .ant-select-arrow {
     transition: transform 0.3s;
 }
